[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/vam_inventory/ItemSmith.gd" type="Script" id=1]
[ext_resource path="res://UI/Theme/darkred_theme.tres" type="Theme" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="ItemSmith" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
regenerate = true

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVB" type="VBoxContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHB" type="HBoxContainer" parent="BG/MainVB"]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="VBoxContainer" parent="BG/MainVB/MainHB"]
margin_right = 63.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3

[node name="ButtonVB" type="VBoxContainer" parent="BG/MainVB/MainHB"]
margin_left = 69.0
margin_right = 231.0
margin_bottom = 540.0

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MainVB/MainHB/ButtonVB"]
margin_right = 162.0
margin_bottom = 24.0

[node name="NewItem" type="Button" parent="BG/MainVB/MainHB/ButtonVB/HBoxContainer"]
margin_right = 162.0
margin_bottom = 24.0
text = "[+] New Item"

[node name="HBSpacer" type="HBoxContainer" parent="BG/MainVB/MainHB/ButtonVB"]
margin_top = 30.0
margin_right = 162.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 120 )

[node name="LoadDB" type="Button" parent="BG/MainVB/MainHB/ButtonVB"]
margin_top = 156.0
margin_right = 162.0
margin_bottom = 180.0
text = "Load ItemDB"

[node name="Clear" type="Button" parent="BG/MainVB/MainHB/ButtonVB"]
margin_top = 186.0
margin_right = 162.0
margin_bottom = 210.0
text = "Clear"

[node name="ItemsVB" type="VBoxContainer" parent="BG/MainVB/MainHB"]
margin_left = 237.0
margin_right = 300.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MainVB/MainHB/ItemsVB"]
margin_right = 63.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="Items" type="GridContainer" parent="BG/MainVB/MainHB/ItemsVB"]
margin_top = 86.0
margin_right = 63.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectVB" type="VBoxContainer" parent="BG/MainVB/MainHB"]
margin_left = 306.0
margin_right = 768.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_right = 462.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="ItemEditLabelHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 46.0
margin_right = 462.0
margin_bottom = 70.0

[node name="ItemEditLabel" type="Label" parent="BG/MainVB/MainHB/InspectVB/ItemEditLabelHB"]
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Item Editor"
align = 1

[node name="ItemIconHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 76.0
margin_right = 462.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 64 )
alignment = 1

[node name="ItemNameLbl" type="Label" parent="BG/MainVB/MainHB/InspectVB/ItemIconHB"]
margin_left = 174.0
margin_top = 36.0
margin_right = 186.0
margin_bottom = 60.0

[node name="ItemIconRect" type="TextureRect" parent="BG/MainVB/MainHB/InspectVB/ItemIconHB"]
margin_left = 192.0
margin_right = 288.0
margin_bottom = 96.0
texture = ExtResource( 3 )

[node name="ItemUuid" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 178.0
margin_right = 462.0
margin_bottom = 202.0
size_flags_horizontal = 3
alignment = 1

[node name="ItemUuid" type="Label" parent="BG/MainVB/MainHB/InspectVB/ItemUuid"]
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
align = 1

[node name="NameHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 208.0
margin_right = 462.0
margin_bottom = 232.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/NameHB"]
margin_right = 70.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="BG/MainVB/MainHB/InspectVB/NameHB"]
margin_left = 76.0
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SceneHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 238.0
margin_right = 462.0
margin_bottom = 262.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/SceneHB"]
margin_right = 132.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Scene File"

[node name="SceneFileButton" type="Button" parent="BG/MainVB/MainHB/InspectVB/SceneHB"]
margin_left = 138.0
margin_right = 192.0
margin_bottom = 24.0
hint_tooltip = "Select the .tscn file associated with the item. This would be the object to be instantiated if the object were in space free floating, attached to a ship, etc..."
text = "[_]"

[node name="SceneFileLineEdit" type="LineEdit" parent="BG/MainVB/MainHB/InspectVB/SceneHB"]
margin_left = 198.0
margin_right = 426.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SceneLineClr" type="Button" parent="BG/MainVB/MainHB/InspectVB/SceneHB"]
margin_left = 432.0
margin_right = 462.0
margin_bottom = 24.0
text = "X"

[node name="IconHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 268.0
margin_right = 462.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/IconHB"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Icon File"

[node name="IconFileButton" type="Button" parent="BG/MainVB/MainHB/InspectVB/IconHB"]
margin_left = 126.0
margin_right = 180.0
margin_bottom = 24.0
text = "[_]"

[node name="IconFileLineEdit" type="LineEdit" parent="BG/MainVB/MainHB/InspectVB/IconHB"]
margin_left = 186.0
margin_right = 426.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="IconLineClr" type="Button" parent="BG/MainVB/MainHB/InspectVB/IconHB"]
margin_left = 432.0
margin_right = 462.0
margin_bottom = 24.0
text = "X"

[node name="TextureHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 298.0
margin_right = 462.0
margin_bottom = 334.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/TextureHB"]
margin_top = 6.0
margin_right = 156.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
text = "Texture File"

[node name="TextureEnable" type="CheckBox" parent="BG/MainVB/MainHB/InspectVB/TextureHB"]
margin_left = 162.0
margin_right = 198.0
margin_bottom = 36.0

[node name="TextureFileButton" type="Button" parent="BG/MainVB/MainHB/InspectVB/TextureHB"]
margin_left = 204.0
margin_right = 258.0
margin_bottom = 36.0
disabled = true
text = "[_]"

[node name="TextureFileLineEdit" type="LineEdit" parent="BG/MainVB/MainHB/InspectVB/TextureHB"]
margin_left = 264.0
margin_right = 426.0
margin_bottom = 36.0
size_flags_horizontal = 3
editable = false

[node name="TextureLineClr" type="Button" parent="BG/MainVB/MainHB/InspectVB/TextureHB"]
margin_left = 432.0
margin_right = 462.0
margin_bottom = 36.0
disabled = true
text = "X"

[node name="TypeHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 340.0
margin_right = 462.0
margin_bottom = 370.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/TypeHB"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 27.0
rect_min_size = Vector2( 70, 0 )
text = "Type"

[node name="TypeOption" type="OptionButton" parent="BG/MainVB/MainHB/InspectVB/TypeHB"]
margin_left = 76.0
margin_right = 462.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "MINERAL"
items = [ "MINERAL", null, false, 0, null, "AMMO", null, false, 1, null, "CONSUMABLE", null, false, 2, null, "WEAPON", null, false, 3, null, "MINERAL", null, false, 4, null, "AMMO", null, false, 5, null, "CONSUMABLE", null, false, 6, null, "WEAPON", null, false, 7, null ]
selected = 0

[node name="StackHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 376.0
margin_right = 462.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/StackHB"]
margin_right = 132.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
text = "Stack Size"

[node name="StackSizeEdit" type="LineEdit" parent="BG/MainVB/MainHB/InspectVB/StackHB"]
margin_left = 138.0
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Divider" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 406.0
margin_right = 462.0
margin_bottom = 410.0

[node name="HSeparator" type="HSeparator" parent="BG/MainVB/MainHB/InspectVB/Divider"]
margin_right = 462.0
margin_bottom = 4.0
size_flags_horizontal = 3

[node name="PropertiesLblHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 416.0
margin_right = 462.0
margin_bottom = 440.0

[node name="Label" type="Label" parent="BG/MainVB/MainHB/InspectVB/PropertiesLblHB"]
margin_right = 192.0
margin_bottom = 24.0
text = "Item Properties"

[node name="AddPropHB" type="HBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 446.0
margin_right = 462.0
margin_bottom = 470.0

[node name="AddPropButton" type="Button" parent="BG/MainVB/MainHB/InspectVB/AddPropHB"]
margin_right = 54.0
margin_bottom = 24.0
text = "[+]"

[node name="PropsVB" type="VBoxContainer" parent="BG/MainVB/MainHB/InspectVB"]
margin_top = 476.0
margin_right = 462.0
margin_bottom = 476.0

[node name="ItemActionsVB" type="VBoxContainer" parent="BG/MainVB/MainHB"]
margin_left = 774.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemActionHB" type="HBoxContainer" parent="BG/MainVB/MainHB/ItemActionsVB"]
margin_right = 186.0
margin_bottom = 24.0
alignment = 1

[node name="SaveItem" type="Button" parent="BG/MainVB/MainHB/ItemActionsVB/ItemActionHB"]
margin_left = 24.0
margin_right = 162.0
margin_bottom = 24.0
size_flags_horizontal = 9
text = "Stage Item"

[node name="CommitDatabaseHB" type="HBoxContainer" parent="BG/MainVB/MainHB/ItemActionsVB"]
margin_top = 30.0
margin_right = 186.0
margin_bottom = 54.0
alignment = 1

[node name="CommitDB" type="Button" parent="BG/MainVB/MainHB/ItemActionsVB/CommitDatabaseHB"]
margin_right = 186.0
margin_bottom = 24.0
size_flags_horizontal = 9
disabled = true
text = "Commit Changes"

[connection signal="pressed" from="BG/MainVB/MainHB/InspectVB/AddPropHB/AddPropButton" to="." method="_on_AddPropButton_pressed"]
